# poster-generator

./: LICENSE  README.md  TEMPLATES.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: advanced_template.py  basic.py  basic_template.py  custom_font.py  grid.yml  image.py  poster_template.py  with_template.py  yml.py
examples/templates/: advanced.json  advanced.yml  basic.yml  my_template.yml  poster.yml
poster_generator/: __init__.py  canvas.py  exceptions.py  generator.py  settings.py  snapping.py
poster_generator/deserializers/: yaml.py
poster_generator/elements/: __init__.py  abstract.py  circle.py  drawable.py  element.py  ellipse.py  factory.py  image.py  rectangle.py  text.py
poster_generator/elements/abstract/: __init__.py  drawable.py  shape.py
poster_generator/elements/mixins/: __init__.py  composite.py
poster_generator/elements/text/: __init__.py  element.py  fonts.py
poster_generator/factories/: __init__.py  element.py  operation.py
poster_generator/loaders/: __init__.py  base.py  yaml_loader.py
poster_generator/loaders/layer_based/: __init__.py  impls.py  loader.py  resolver.py
poster_generator/loaders/yaml/: __init__.py  loader.py  resolver.py
poster_generator/operations/: __init__.py  factory.py  image.py  text.py
poster_generator/utils/: __init__.py  alignment.py  colors.py
tests/: test_canvas.py  test_elements.py  test_yaml_loader.py
